Modernizing the shared-fixtures directory tree